tests/expected/parse01e.err
parse01e.usc:16:1: error: Expected end of file
}
^
1 Error(s)
